# autocamera

./: .gitignore  .package.xml.swp  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cisstLog.txt  cmake_install.cmake  package.xml
catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_generated/installspace/: autocamera.pc  autocameraConfig.cmake
code/: mtsSimHWECM.cpp  mtsSimHWECM.cpp~  mtsSimHWPSM.cpp
config/: autocamera.conf  autocamera.conf~
human_factors_study_recordings/test_run/: test_run_hw.bag  test_run_sim.bag
human_factors_study_recordings/test_run2/: test_run2_hw.bag  test_run2_sim.bag  test_run2_sim.orig.bag
include/: mtsSimHWECM.h  mtsSimHWPSM.h
launch/: fakecam.launch  fakecam.launch~  mtm_rviz.launch  sim_ecm.launch  sim_full.launch  sim_psm.launch  test_hardware.launch  test_simulation.launch  test_simulation.launch~
model/: ecm.xacro  ecm.xacro~  mtm.urdf.xacro  mtm.urdf.xacro~  mtm_left.urdf.xacro  mtm_right.urdf.xacro  mtm_right.urdf.xacro~  psm_one.urdf.xacro  psm_two.urdf.xacro  psm_two.urdf.xacro~
rviz/: simulation.rviz
scripts/: Circlegesture.py  ConvertBags.py  Leap_ecm.py  Leap_psm1.py  Leap_psm1pinch.py  Leap_psm2pinch.py  Leap_psm_arm.py  Leap_psm_invkin.py  Leap_psm_test.py  Leap_psm_test2.py  Pinchgesture.py  Thumb_test.py  Valueprint.py  __common_imports__.py  arm.py  arm_optimization.py  autocamera_algorithm.py  autocamera_control_node.py  autocamera_node.py  autocamera_node.py~  autocamera_viewpoint_scaling.py  base_coregistration.py  camera_control_gui.py  camera_control_gui.ui  camera_control_node.py  camera_control_pid.py  cisstLog.txt  clutch_control.py  clutch_move.py  clutchless_system.py  collect_joint_angle_data.py  control_arms.py  ecm_listner.py  ecm_pub.py  ecm_publisher.py  extrinsic_cal.py  hfs_bag_processor.py  hfs_compute_fk.py  ipython_script.py  joint_angles.db  (+42 more)
scripts/html/: annotated.html  classConvertBags_1_1ConvertBags-members.html  classConvertBags_1_1ConvertBags.html  classarm_1_1arm-members.html  classarm_1_1arm.html  classautocamera__algorithm_1_1Autocamera-members.html  classautocamera__algorithm_1_1Autocamera.html  classbase__coregistration_1_1coregistrator-members.html  classbase__coregistration_1_1coregistrator.html  classbase__coregistration_1_1coregistrator_1_1REGISTRATION__MODE-members.html  classbase__coregistration_1_1coregistrator_1_1REGISTRATION__MODE.html  classcamera__control__gui_1_1Ui__Dialog-members.html  classcamera__control__gui_1_1Ui__Dialog.html  classcamera__control__node_1_1Autocamera__node__handler-members.html  classcamera__control__node_1_1Autocamera__node__handler.html  classcamera__control__node_1_1Autocamera__node__handler_1_1MODE-members.html  classcamera__control__node_1_1Autocamera__node__handler_1_1MODE.html  classcamera__control__node_1_1ClutchControl-members.html  classcamera__control__node_1_1ClutchControl.html  classcamera__control__node_1_1ClutchControl_1_1MODE-members.html  classcamera__control__node_1_1ClutchControl_1_1MODE.html  classcamera__control__node_1_1Joystick-members.html  (+78 more)
src/: #sim_ecm_ros.cpp#  .sim_autocamera.cpp.swp  sim_autocamera.cpp  sim_autocamera.cpp~  sim_ecm_ros.cpp  sim_psm_ros.cpp
(+99 files in other folders)
